--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "express": "^4.16.2",
+    "growl": "^1.10.5",
     "hoek": "^5.0.3",
     "react": "^0.14.9",
     "react-dom": "^0.14.9",
